# legal-autoresearch-os

./: .gitignore  LICENSE  README.md  benchmark.html  pyproject.toml
benchmarks/results/deepresearch_bench_autoresearch_os/: autoresearch-os.jsonl  latest.json  latest.md
docs/: architecture.md  hackathon_1_min_demo_script.md  modal_agents_reference.md
examples/: demo_goal.txt
jason/: README.md  __init__.py  agent.py  context_broker.py  evaluator.py  harness.py  legal_skills.py  main.py  memory.py  program.py  pyproject.toml  scheduler.py  workers.py
jason/benchmarks/: __init__.py  cases.jsonl  deepresearch_bench.py  run_benchmark.py
jason/evals/: cases.jsonl  run_local.py
jason/prompts/: critic_agent.md  legal_authority_agent.md  parent_agent.md  report_agent.md
jason/tests/: test_architecture.py  test_benchmark.py  test_context_broker.py  test_deepresearch_bench_adapter.py  test_goal_directed_planning.py  test_legal_skills.py
modal/: app.py
reports/q1_noncompete/: claims.json  confidence_scores.json  criticisms.json  entities.json  final_report.html  final_report.md  hypotheses.json  metrics.json  open_questions.json  program.md  tasks.json
reports/q1_noncompete/evals/: iteration_001.json  iteration_002.json  iteration_003.json  next_tuning_params_003.json
reports/q1_noncompete/evidence/: iteration_001.json  iteration_003.json  iteration_004.json
reports/q2_contractor/: claims.json  confidence_scores.json  criticisms.json  entities.json  final_report.html  final_report.md  hypotheses.json  metrics.json  open_questions.json  program.md  raindrop_feedback.json  tasks.json
reports/q2_contractor/evals/: iteration_001.json  iteration_002.json  tuning_params_001.json  tuning_params_002.json  (+1 more)
reports/q3_tos/: claims.json  criticisms.json  entities.json  final_report.html  final_report.md  hypotheses.json  metrics.json  open_questions.json  program.md  raindrop_feedback.json  tasks.json  tuning_params.json
reports/q4_databreach/: claims.json  criticisms.json  entities.json  final_report.html  final_report.md  hypotheses.json  metrics.json  open_questions.json  program.md  raindrop_feedback.json  tasks.json
scripts/legalbench/: README.md  compare_hearsay.py  download.py  final_report.py  jason_agent.py  run_benchmark.py  single_shot.py  tasks.py
src/autoresearch_os/: __init__.py  agents.py  cli.py  critic.py  evaluator.py  gaps.py  html.py  hypotheses.py  knowledge.py  llm.py  modal_bridge.py  models.py  pdf.py  planner.py  program.py  raindrop_feedback.py  raindrop_tracing.py  report.py  retrieval.py  runtime.py  skills.py  tuning.py
tests/: test_legalbench_jason_agent.py  test_llm.py  test_runtime.py  test_scoring_golden.py
(+79 files in other folders)
