[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-autoresearch-os"
version = "0.1.0"
description = "A legal autoresearch control system with agents, retrieval, truth maintenance, and convergence scoring."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Legal AutoResearch OS Hackathon Team" }]
dependencies = ["openai-agents>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
modal = ["modal>=1.0"]
raindrop = ["raindrop-ai"]

[project.scripts]
autoresearch = "autoresearch_os.cli:main"
legal-autoresearch = "autoresearch_os.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
